# golf

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  index.html
sim/: Cargo.toml  Dockerfile  TODO.md
sim/assets/: index.html
sim/src/: about.rs  bag.rs  ball.rs  camera.rs  csv.rs  inputs.rs  main.rs  plotting.rs  plugins.rs  shot.rs  state.rs  stats.rs  ui.rs  world.rs
sim/src/plotting/: backend.rs  chart.rs  mod.rs  window.rs
sim/src/plotting/charts/: mod.rs  timedata.rs  xytime.rs
src/: about.rs  bag.rs  ball.rs  constants.rs  csv.rs  inputs.rs  main.rs  menu.rs  plotting.rs  shot.rs  state.rs  stats.rs  ui.rs  world.rs
tools/: README.md  pyproject.toml
tools/src/ball/: app.py  gpt.py  model.py  model3d.py
