[package]
name = "ball"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = { version = "0.30", default-features = false, features = ["open_url", "default_fonts", "render"]}
bevy-inspector-egui = {version = "0.27.0", default-features = false, features = ["bevy_render"] }
egui_plot = "0.29.0"
csv = "1.3.0"
plotters = "0.3.7"
plotters-backend = "0.3.7"
wasm-bindgen = "0.2.95"
egui_dock = "0.14.0"
